style(LoginForm): fix spacing in LinkedIn logo

--- a/src/routes/auth/login/LoginForm.scss
+++ b/src/routes/auth/login/LoginForm.scss
@@ -31,9 +31,11 @@
     line-height: 1.8rem;
     min-width: 20rem;
     display: inline-flex;
-    justify-content: space-evenly;
     align-items: center;
 
+    i {
+      margin-right: 0.5rem;
+    }
     @media only screen and (max-width: $tablet) {
       min-width: fit-content;
     }
